k8s/00-namespace-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: image-uploader
  labels:
    name: image-uploader
