k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: image-uploader
  labels:
    name: image-uploader
