k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-uploader-service
  namespace: image-uploader
  labels:
    app: image-uploader
spec:
  type: NodePort
  selector:
    app: image-uploader
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 3000
    nodePort: 30080
  sessionAffinity: None
