k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-uploader-service
  namespace: image-uploader
  labels:
    app: image-uploader
spec:
  selector:
    app: image-uploader
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
